--- a/index.html
+++ b/index.html
@@ -21,28 +21,8 @@
         <img class="d-block mx-auto mb-4" src="EzCalc-logos_transparent.png" alt="" width="300" height="300">
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Calculating made fun!</p>
-            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <button type="button" class="btn btn-outline-secondary">Action</button>
-                        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="sr-only">Toggle Dropdown</span>
-                        </button>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
-                    </div>
-                    <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
-                    <div class="input-group-append">
-                        <button class="btn btn-outline-secondary" type="button">Execute</button>
-                    </div>
-                </div>
-            </div>
+            <p class="lead mb-4">Welcome!</p>
+            <a class="btn btn-primary" href="choice/index.html" role="button">Continue</a>
         </div>
     </div>
 </div>
