--- a/choice/calculator/help.html
+++ b/choice/calculator/help.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>EzCalc</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="layout" content=""/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
-
+<div class="page-wrapper">
+    <div class="px-4 py-5 my-5 text-center">
+        <img class="d-block mx-auto mb-4" src="EzCalc-logos_transparent.png" alt="" width="300" height="300">
+        <h1 class="display-5 fw-bold">EzCalc</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">To use the program, input some numbers, choose an operand and execute to see the result!</p>
+            <a class="btn btn-primary" href="index.html" role="button">Home</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
