--- a/choice/calculator/index.html
+++ b/choice/calculator/index.html
@@ -18,10 +18,11 @@
 <body>
 <div class="page-wrapper">
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="EzCalc-logos_transparent.png" alt="" width="300" height="300">
+        <img class="d-block mx-auto mb-4" src="../../EzCalc-logos_transparent.png" alt="" width="300" height="300">
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Calculating made fun!</p>
+            <p class="lead mb-4">Input numbers in the box below, choose and operand and execute to see the result!</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -30,11 +31,11 @@
                             <span class="sr-only">Toggle Dropdown</span>
                         </button>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div role="separator" class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
+                            <a class="dropdown-item" href="#">Add</a>
+                            <a class="dropdown-item" href="#">Substract</a>
+                            <a class="dropdown-item" href="#">Multiply</a>
+<!--                            <div role="separator" class="dropdown-divider">Divide</div>-->
+                            <a class="dropdown-item" href="#">Divide</a>
                         </div>
                     </div>
                     <input type="text" class="form-control" aria-label="Text input with segmented dropdown button">
