--- a/choice/index.html
+++ b/choice/index.html
@@ -21,7 +21,7 @@
         <img class="d-block mx-auto mb-4" src="EzCalc-logos_transparent.png" alt="" width="300" height="300">
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4"><a href="choice/calculator/index.html">1: For Calculator</a> or <a href="choice/calculator/index.html">2: For Conditional</a></p>
+            <p class="lead mb-4"><a href="calculator/index.html">1: For Calculator</a> or <a href="calculator/index.html">2: For Conditional</a></p>
         </div>
     </div>
 </div>
