--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Welcome!</p>
             <a class="btn btn-primary" href="choice/index.html" role="button">Continue</a>
+            <a class="btn btn-primary" href="help.html" role="button">Help</a>
         </div>
     </div>
 </div>
