--- a/choice/conditional/help.html
+++ b/choice/conditional/help.html
@@ -18,7 +18,7 @@
 <body>
 <div class="page-wrapper">
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="EzCalc-logos_transparent.png" alt="" width="300" height="300">
+        <a href="../../index.html"><img class="d-block mx-auto mb-4" src="../../EzCalc-logos_transparent.png" alt="" width="300" height="300"></a>
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">To use the program, input some numbers, choose an operand and execute to see the result!</p>
