--- a/choice/conditional/index.html
+++ b/choice/conditional/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="page-wrapper">
     <div class="px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="../../EzCalc-logos_transparent.png" alt="" width="300" height="300">
+        <a href="../../index.html"><img class="d-block mx-auto mb-4" src="../../EzCalc-logos_transparent.png" alt="" width="300" height="300"></a>
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Calculating made fun!</p>
@@ -51,6 +51,7 @@
                 <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm">
             </div>
         </div>
+        <a class="btn btn-primary" href="help.html" role="button">Help</a>
     </div>
 </div>
 </body>
