--- a/choice/calculator/index.html
+++ b/choice/calculator/index.html
@@ -46,6 +46,7 @@
             </div>
         </div>
         <a class="btn btn-primary" href="help.html" role="button">Help</a>
+        <a class="btn btn-primary" href="../index.html" role="button">Back</a>
     </div>
 </div>
 </body>
