--- a/choice/conditional/index.html
+++ b/choice/conditional/index.html
@@ -22,7 +22,8 @@
         <h1 class="display-5 fw-bold">EzCalc</h1>
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Calculating made fun!</p>
-            <p class="lead mb-4">Input numbers in the box below, choose and operand and execute to see the result!</p>
+            <p class="lead mb-4">Input numbers in the box below, choose and operand, create a condition and start the loop!</p>
+            <a class="btn btn-primary mb-3" href="help.html" role="button">Start</a>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -52,6 +53,7 @@
             </div>
         </div>
         <a class="btn btn-primary" href="help.html" role="button">Help</a>
+        <a class="btn btn-primary" href="../index.html" role="button">Back</a>
     </div>
 </div>
 </body>
