--- a/choice/conditional/index.html
+++ b/choice/conditional/index.html
@@ -23,7 +23,12 @@
         <div class="col-lg-6 mx-auto">
             <p class="lead mb-4">Calculating made fun!</p>
             <p class="lead mb-4">Input numbers in the box below, choose and operand, create a condition and start the loop!</p>
-            <a class="btn btn-primary mb-3" href="help.html" role="button">Start</a>
+            <div class="input-group input-group-sm mb-3 px-5">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="inputGroup-sizing-sm1">Start with:</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Small" aria-describedby="inputGroup-sizing-sm1">
+            </div>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
